{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 11,
  "lineage": "a87c5e4b-c4aa-c624-c1ca-27c594d64a03",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-gcp-377717/global/networks/auto-terraform-network",
            "mtu": 0,
            "name": "auto-terraform-network",
            "project": "terraform-gcp-377717",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-377717/global/networks/auto-terraform-network"
          }
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc-fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-16T05:48:47.500-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-377717/global/firewalls/load-balancer-hc",
            "log_config": [],
            "name": "load-balancer-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-377717/global/networks/auto-terraform-network",
            "priority": 1000,
            "project": "terraform-gcp-377717",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-377717/global/firewalls/load-balancer-hc",
            "source_ranges": [
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "my-target-pool"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-lb-fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-16T05:48:47.516-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-377717/global/firewalls/load-balancer-vm-service",
            "log_config": [],
            "name": "load-balancer-vm-service",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-377717/global/networks/auto-terraform-network",
            "priority": 1000,
            "project": "terraform-gcp-377717",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-377717/global/firewalls/load-balancer-vm-service",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "my-target-pool"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2023-02-16T05:48:28.833-08:00",
            "id": "projects/terraform-gcp-377717/regions/us-central1/forwardingRules/load-balancer",
            "ip_address": "34.133.61.66",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "load-balancer",
            "network_tier": "PREMIUM",
            "port_range": "80",
            "project": "terraform-gcp-377717",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-377717/regions/us-central1/forwardingRules/load-balancer",
            "target": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-377717/regions/us-central1/targetPools/load-balancer"
          },
          "dependencies": [
            "module.lb.google_compute_http_health_check.default",
            "module.lb.google_compute_target_pool.default"
          ]
        }
      ]
    }
  ]
}